// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar when logged out > matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-md"
    >
      <div
        class="container-fluid"
      >
        <a
          aria-current="page"
          class="navbar-brand active"
          href="/"
        >
          fa
          <b
            class="mychart"
          >
            m
          </b>
          il
          <b
            class="mychart"
          >
            y
          </b>
           
          <b
            class="mychart"
          >
            chart
          </b>
        </a>
        <ul
          class="ml-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class=""
              href="/login"
            >
              Login
            </a>
            <a
              class=""
              href="/signup"
            >
              Sign Up
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`NavBar with Family Context > matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-md"
    >
      <div
        class="container-fluid"
      >
        <a
          aria-current="page"
          class="navbar-brand active"
          href="/"
        >
          fa
          <b
            class="mychart"
          >
            m
          </b>
          il
          <b
            class="mychart"
          >
            y
          </b>
           
          <b
            class="mychart"
          >
            chart
          </b>
        </a>
        <ul
          class="ml-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class=""
              href="/home"
            >
              Home
            </a>
            <a
              class=""
              href="/profile"
            >
              Profile
            </a>
            <a
              aria-current="page"
              class="active"
              href="/"
              id="Navbar-logout"
            >
              Log Out
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
